tests/machine/x/cpp/membership.mochi.cpp
#include <bits/stdc++.h>
using namespace std;

int main() {
	auto nums = vector<int>{1, 2, 3};
	(cout << (find(2.begin(), 2.end(), nums) != 2.end()));
	(cout << (find(4.begin(), 4.end(), nums) != 4.end()));
	return 0;
}
